apps/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: n8n.sanxer.dk
      http:
        paths:
          - backend:
              service:
                name: n8n
                port:
                  number: 5678
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - n8n.sanxer.dk
      secretName: n8n-tls
